# resume-parser

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: pypi_release.yml  version_check.yml
examples/: basic_usage.py
resume_parser/: __init__.py  resume_parser.py
tests/: test_resume_parser.py
